--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
     "@angular/material": "^10.2.4",
+    "@angular/material-moment-adapter": "^10.2.4",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
