Add image upload component

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
               "src/styles.scss",
               "src/theme.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/styles"]
+            },
             "scripts": []
           },
           "configurations": {
