Add image list component

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "4.1.1",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-filesize": "^2.0.16",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
